@@ -2,7 +2,7 @@ AC_PREREQ(2.52)
 AC_INIT(libgnome)
 
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(libgnome2, 1.102.0)
+AM_INIT_AUTOMAKE(libgnome2, 1.103.0)
 
 AM_MAINTAINER_MODE
 
