@@ -1,3 +1,12 @@
+Mon Sep 03 17:27:04 2001  George Lebl <jirka@5z.com>
+
+	* configure.in: raise version to 1.103.0
+
+2001-09-03  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* libgnome/gnome-i18n.h: removed #define's for gettext macros, and
+	include bonobo/bonobo-i18n.h, which includes them
+
 2001-09-02  Anders Carlsson  <andersca@gnu.org>
 
 	* Makefile.am: Don't build tests/
